# AnimeTrivia

./: .env.example  .gitignore  README.md  dump.rdb  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0a1920014b67_changed_user_table_schema.py  1248a6a7264f_adding_default_value_to_player_history_.py  169067128fd0_initial_migration.py  1a44a8c0ce7c_remove_uniqueness_from_name_in_titles.py  1b03589c02dc_adding_full_junction_table_functionality.py  1e5e49d47a19_initial_migration_with_tablename_fr_.py  2ab683506a60_make_some_fields_unique.py  2b0488c25dc1_testing_junction_table_functionality.py  2e2d48c2070f_remove_type_field_from_titles_table.py  3526c4a07aea_fixing_relationships_and_versions.py  383f1eaad513_chaning_relationship_with_image_table.py  3bd9fd0667f4_initial_migration.py  48ccd0af7aed_cleanup_partial_migration_drop_foreign_.py  49886da82a58_rank_is_optional_now.py  50a83a28537e_change_title_to_name.py  57377a32bd8a_making_fields_in_trailer_table_nullable.py  5cf7672a756f_fixing_profile_user_relationship.py  63d3e4ae4252_chaning_type_in_titles_to_optional.py  785f786bccd0_change_title_to_name.py  7bdc63294208_image_relationship_changed.py  7ed0a53f33d6_nullable_profile_id.py  8f23a8c6afc5_initial_migration.py  8ff5f7cdbe86_initial_migration_with_tablename_fr_.py  ac6ff989a525_adding_mal_id.py  (+21 more)
db/: base_orm_model.py  db_helpers.py  session_manager.py
dependencies/: admin.py  redis_client.py  spotify_sso.py  token_service.py
dto/: base_dto.py
routers/: user_router.py
utils/: pkce_code_utils.py  secret_key_generator.py  state_generator.py
(+61 files in other folders)
