[project]
name = "trivia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.13",
    "fastapi-oauth2>=1.3.0",
    "fastapi-sso>=0.18.0",
    "idemptx>=0.2.2",
    "pymysql>=1.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
